test/Concurrency/actor_isolation_filecheck.code
// RUN: %target-language-frontend -language-version 6 -target %target-language-5.1-abi-triple %s -emit-silgen -o - | %FileCheck %s
// RUN: %target-language-frontend -language-version 6 -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify

// README: This file contains FileCheck tests that validate that specific Codira
// entities have their respective SILFunctions assigned the correct actor
// isolation by FileChecking against SILGen.

////////////////////////
// MARK: Declarations //
////////////////////////

fn useValueAsync<T>(_ t: T) async {}

/////////////////
// MARK: Tests //
/////////////////

// CHECK: // synchronousActorIsolatedFinalClassMethodError()
// CHECK-NEXT: // Isolation: global_actor. type: MainActor
// CHECK-NEXT: sil hidden [ossa] @$s25actor_isolation_filecheck45synchronousActorIsolatedFinalClassMethodErroryyYaF : $@convention(thin) @async () -> () {
@MainActor fn synchronousActorIsolatedFinalClassMethodError() async {
  @MainActor final class Test {
    // CHECK: // foo() in Test #1 in synchronousActorIsolatedFinalClassMethodError()
    // CHECK-NEXT: // Isolation: global_actor. type: MainActor
    // CHECK-NEXT: sil private [ossa] @$s25actor_isolation_filecheck45synchronousActorIsolatedFinalClassMethodErroryyYaF4TestL_C3fooyyF : $@convention(method) (@guaranteed Test) -> () {
    fn foo() {}
  }

  immutable t = Test()
  immutable erased: () -> Void = t.foo

  await useValueAsync(erased) // expected-error {{sending 'erased' risks causing data races}}
  // expected-note @-1 {{sending main actor-isolated 'erased' to nonisolated global function 'useValueAsync' risks causing data races between nonisolated and main actor-isolated uses}}
}
